--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -427,7 +427,7 @@ jobs:
         shell: bash
         run: |
           echo "Attempting get current version id"
-          version=$(git describe --tags --abbrev=0)
+          version="v2024.03.1.3"
           echo "Current Version is: $version"
           regex="^v([0-9]+).([0-9]+).([0-9]+).([0-9]+)?$"
           if [[ $version =~ $regex ]] ; then
