--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
         shell: bash
         run: |
           echo "Attempting get previous version id"
-          version=$(git describe --tags --abbrev=0)
+          version="v2024.03.1.3"
           
           echo "Previous Version is: $version"
           regex="^v([0-9]+).([0-9]+).([0-9]+).([0-9]+)?$"
